--- a/app/Resources/views/course_info/equipment/view/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/view/equipment.html.twig
@@ -41,7 +41,7 @@
                     <tbody>
                     <tr>
                         <td class="text-left">
-                            <span>Non renseigné</span></br>
+                            <span>Non renseigné</span>
                         </td>
                     </tr>
                     </tbody>
