--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -55,26 +55,45 @@
                     Ajouter une remédiation
                 </button>
             </div>
-            <div class="d-flex mt-3">
+            <div class="d-flex my-2">
                 <span class="align-text-bottom mt-1">Assister à des séances de tutorat :</span>
                 <div class="ml-2">
-                    <style>
-                        .toggle.ios, .toggle-on.ios, .toggle-off.ios {
-                            border-radius: 20px;
-                        }
-                        .toggle-off {
-                            padding-left: 1rem !important;
-                        }
-                        .toggle.ios .toggle-handle {
-                            border-radius: 20px;
-                        }
-                    </style>
                     <input type="checkbox" data-toggle="toggle" data-style="ios" id="btn_tutoring" data-on="Oui"
                            data-off="non"
+                           data-action-title="Ajouter une compétence"
+                           data-action-url="{{ path('objective_course_tutoring', {'id': courseInfo.id }) }}"
                             {% if courseInfo.tutoring %}
                                 checked
                             {% endif %}
                     >
+                </div>
+            </div>
+            <div class="border p-2 d-inline-block position-relative" id="assistTutoring">
+                <button type="button"
+                        class="btn btn-link modal-action p-0 position-absolute"
+                        style="top: 0px; right: 0px"
+                        data-action-title="Ajouter une compétence"
+                        data-action-url="{{ path('objective_course_tutoring', {'id': courseInfo.id }) }}">
+                    <i class="fas fa-edit"></i>
+                </button>
+                <div class="mr-4">
+                    {% if courseInfo.tutoringTeacher == 1 %}
+                        <i class="fas fa-check text-success"></i>
+                    {% else %}
+                        <i class="fas fa-times text-danger"></i>
+                    {% endif %}
+                    <span>Avec tuteur enseignant</span>
+                </div>
+                <div>
+                    {% if courseInfo.tutoringStudent == 1 %}
+                        <i class="fas fa-check text-success"></i>
+                    {% else %}
+                        <i class="fas fa-times text-danger"></i>
+                    {% endif %}
+                    <span class="ml-1">Avec tuteur étudiant</span>
+                </div>
+                <div class="mt-2">
+                    <span>{{ courseInfo.tutoringDescription }}</span>
                 </div>
             </div>
         </div>
@@ -93,17 +112,23 @@
 
             $('#btn_tutoring').change(function () {
                 let checkedValue = $(this).prop('checked');
-                checkedValue = checkedValue === true ? 1 : 0;
-                let url = "{{ path('objective_course_tutoring', {'id': courseInfo.id, 'action': 'checkedValue'}) }}";
-                url = url.replace("checkedValue", checkedValue);
-                $.ajax({
-                    url: url,
-                    method: "POST",
-                    dataType: "html",
-                    success: function (data) {
-                    }
-                });
-            })
+
+                if (checkedValue === true) {
+                    $('#assistTutoring').show();
+                    let $modal_app = $('#modal_app');
+                    let $modal_app_title = $('#modal_app_title');
+                    let $modal_app_body = $('#modal_app_body');
+                    let title = $(this).data('action-title');
+                    let url = $(this).data('action-url');
+                    let event = $(this).data('action-event');
+                    Syllabus.handleModalAction($modal_app, $modal_app_title, $modal_app_body, title, url, event)
+                }else {
+                    console.log('test');
+                    $('#assistTutoring').hide();
+                }
+            });
         });
+
+
     </script>
 {% endblock %}
