--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -1,12 +1,8 @@
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
-    <div class="col">
-        {{ form_row(form.period) }}
+    <div class="col-6">
         {{ form_row(form.domain, {label_attr: {class: 'required'}}) }}
-        {{ form_row(form.languages) }}
-    </div>
-    <div class="col">
         <label class="required font-weight-bold">
             Quel est le niveau de ce cours ?
             <img id="infos_level" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
@@ -14,48 +10,29 @@
         {{ form_errors(form.level) }}
         {{ form_widget(form.level, {label_attr: {class: 'radio-custom'} }) }}
     </div>
+    <div class="col-6">
+        {{ form_row(form.period) }}
+        {{ form_row(form.languages) }}
+    </div>
 </div>
 
-<div class="row mt-2">
-    <div class="col">
-        <label class="required font-weight-bold">
-            Résumé
-        </label>
-        {{ form_errors(form.summary) }}
-        {{ form_widget(form.summary) }}
-    </div>
-    <div class="col">
+<div class="row mt-4">
+    <div class="col-6">
         <label class="re">
-            Intégrer une ressource vidéo (ou audio) ou téléverser un fichier image de présentation du cours, en respectant la règlementation sur les droits d'auteur.
+            Intégrer une ressource vidéo (ou audio) ou téléverser un fichier image de présentation du cours, en
+            respectant la règlementation sur les droits d'auteur.
         </label>
-        {{ form_errors(form.video) }}
-        {{ form_errors(form.image) }}
-        {{ form_widget(form.mediaType) }}
-        {% set imageTabClasses = 'nav-link' %}
-        {% set imageContentClasses = 'tab-pane fade' %}
-        {% set videoTabClasses = 'nav-link' %}
-        {% set videoContentClasses = 'tab-pane fade' %}
-        {% if form.vars.value.mediaType == 'video' %}
-            {% set videoTabClasses = videoTabClasses ~ ' active' %}
-            {% set videoContentClasses = videoContentClasses ~ ' show active' %}
-        {% else %}
-            {% set imageTabClasses = imageTabClasses ~ ' active' %}
-            {% set imageContentClasses = imageContentClasses ~ ' show active' %}
-        {% endif %}
-        <ul class="nav nav-tabs" id="media_type" role="tablist">
-            <li class="nav-item">
-                <a class="{{ imageTabClasses }}" href="#media_image_container" role="tab" data-toggle="tab" data-media-type="image">
-                    Image
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="{{ videoTabClasses }}" href="#media_video_container" role="tab" data-toggle="tab" data-media-type="video">
-                    Vidéo
-                </a>
-            </li>
-        </ul>
-        <div class="tab-content border p-2">
-            <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
+
+        <div>
+            <input type="radio" id="radio_image" value="image" onclick="image();">
+            <label class="mr-2" for="image">Image</label>
+
+            <input class="" type="radio" id="radio_video" value="video" onclick="video();">
+            <label for="video">Video</label>
+        </div>
+
+        <div class="border p-2">
+            <div id="image">
                 <small class="font-weight-bold">Fichier de type jpeg ou png (2Mo maximum)</small>
                 {{ form_widget(form.image, {label_attr: {class: 'file-custom'} }) }}
                 {% if form.vars.data.image is not null %}
@@ -67,20 +44,39 @@
                     <img class="img-thumbnail" id="media_image" src="{{ asset('data/' ~ imgSrc) }}">
                 {% endif %}
             </div>
-            <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
-                <img id="infos_video" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
+
+            <div id="video">
+                <button class="btn btn-light" type="button" data-toggle="collapse" data-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    Comment ajouter une vidéo
+                </button>
+                <div class="alert alert-light collapse" role="alert" id="collapseExample">
+                    <span>Afin de pouvoir intégrer une vidéo dans votre cours, veuillez vous assurer que celle-ci soit hébergée sur un serveur externe à Moodle (ex: UNSPOD, Youtube, ...).</br>
+                        Si ce n’est pas le cas, vous pouvez demander de l’aide pour la déposer sur une de ces plateformes.</br>
+                        Une fois qu’elle y est stockée, vous pouvez cliquer sur “Partager / Intégrer” afin de récupérer le lien d'intégration ressemblant à :</span>
+                    <pre class="mb-0">&lt;iframe ... &gt;&lt;/iframe&gt;</pre>
+                    <span>Copiez ce code et insérez-le dans le champ “Vidéo” ci-dessous. La vidéo sera visible par vos étudiants directement sur votre syllabus.</span>
+                </div>
                 {{ form_widget(form.video) }}
                 <label placeholder="URL"></label>
             </div>
         </div>
     </div>
+    <div class="col-6">
+        <label class="required font-weight-bold">
+            Résumé
+        </label>
+        {{ form_errors(form.summary) }}
+        {{ form_widget(form.summary) }}
+    </div>
 </div>
-
 <div class="mt-2">
-    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn btn-primary submit rounded"
+            data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
         Sauvegarder
     </button>
-    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
+    <button type="button" class="cancel-button btn btn-secondary rounded"
+            data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
         Annuler
     </button>
 </div>
@@ -88,7 +84,26 @@
 {{ form_end(form) }}
 
 <script>
-    $('#infos_level').click(function(){
+
+    $(document).ready(function () {
+        image();
+    });
+
+    function image() {
+        $('#radio_image').prop('checked', true);
+        $('#radio_video').prop('checked', false);
+        $('#image').show();
+        $('#video').hide();
+    }
+
+    function video() {
+        $('#radio_video').prop('checked', true);
+        $('#radio_image').prop('checked', false);
+        $('#image').hide();
+        $('#video').show();
+    }
+
+    $('#infos_level').click(function () {
         var message = '<ul>' +
             '<li><strong>Débutant</strong> : Ce cours demande peu ou pas de connaissances préaables.</li>' +
             '<li><strong>Intermédiaire</strong> : Ce cours demande quelques connaissances préalables.</li>' +
