--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -55,52 +55,10 @@
                     Ajouter une remédiation
                 </button>
             </div>
-            <div class="d-flex my-2">
-                <span class="align-text-bottom mt-1">Assister à des séances de tutorat :</span>
-                <div class="ml-2">
-                    <input type="checkbox" data-toggle="toggle" data-style="ios" id="btn_tutoring" data-on="Oui"
-                           data-off="non"
-                           data-action-title="Ajouter une compétence"
-                           data-action-url="{{ path('objective_course_active_tutoring', {'id': courseInfo.id }) }}"
-                            {% if courseInfo.tutoring %}
-                                checked
-                            {% endif %}
-                    >
-                </div>
-            </div>
-            <div class="border p-2 d-inline-block position-relative" id="assistTutoring">
-                <button type="button"
-                        class="btn btn-link modal-action p-0 position-absolute"
-                        style="top: 0px; right: 0px"
-                        data-action-title="Ajouter une compétence"
-                        data-action-url="{{ path('objective_course_tutoring', {'id': courseInfo.id }) }}">
-                    <i class="fas fa-edit"></i>
-                </button>
-                <div class="mr-4">
-                    {% if courseInfo.tutoringTeacher == 1 %}
-                        <i class="fas fa-check text-success"></i>
-                    {% else %}
-                        <i class="fas fa-times text-danger"></i>
-                    {% endif %}
-                    <span>Avec tuteur enseignant</span>
-                </div>
-                <div>
-                    {% if courseInfo.tutoringStudent == 1 %}
-                        <i class="fas fa-check text-success"></i>
-                    {% else %}
-                        <i class="fas fa-times text-danger"></i>
-                    {% endif %}
-                    <span class="ml-1">Avec tuteur étudiant</span>
-                </div>
-                <div class="mt-2">
-                    <span>{{ courseInfo.tutoringDescription }}</span>
-                </div>
-            </div>
         </div>
         <div class="card-body">
         </div>
     </div>
-
 {% endblock %}
 
 {% block javascripts %}
@@ -110,11 +68,9 @@
             $('#menu-objectives_course').addClass('active');
             $('#menu-objectives_course').addClass('border-bottom-3 border-white');
 
-            $('#btn_tutoring').change(function () {
+            $(document).on('change', '#btn_tutoring', function () {
                 let checkedValue = $(this).prop('checked');
-
                 if (checkedValue === true) {
-                    $('#assistTutoring').show();
                     let $modal_app = $('#modal_app');
                     let $modal_app_title = $('#modal_app_title');
                     let $modal_app_body = $('#modal_app_body');
@@ -122,13 +78,29 @@
                     let url = $(this).data('action-url');
                     let event = $(this).data('action-event');
                     Syllabus.handleModalAction($modal_app, $modal_app_title, $modal_app_body, title, url, event)
-                }else {
-                    console.log('test');
-                    $('#assistTutoring').hide();
                 }
+                checkedValue = checkedValue === true ? 1 : 0;
+                let url = "{{ path('objective_course_active_tutoring', {'id': courseInfo.id, 'action': 'checkedValue'}) }}";
+                url = url.replace("checkedValue", checkedValue);
+                let card = $('#card-tutoring-resources');
+                let $cardBody = card.find('.card-body');
+                $.ajax({
+                    url: url,
+                    method: "POST",
+                    dataType: "html",
+                    success: function (data) {
+                        let json = data;
+                        let obj = JSON.parse(json);
+                        $cardBody.html(obj.content);
+                        if(obj.status == true)
+                        {
+                            $('#assistTutoring').show();
+                        }else{
+                            $('#assistTutoring').hide();
+                        }
+                    }
+                });
             });
-        });
-
-
+        })
     </script>
 {% endblock %}
