--- a/app/Resources/views/security/reset_password.html.twig
+++ b/app/Resources/views/security/reset_password.html.twig
@@ -1,15 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-    <div class="card">
+    <div class="card text-center">
     <div class="card-header">
         <h1>Veuillez saisir votre nouveau mot de passe</h1>
     </div>
         <div class="card-body">
-            {{ form_start(form) }}
-                {{ form_row(form.password) }}
-                <button class="btn btn-primary">Réinitialiser</button>
-            {{ form_end(form) }}
+            <div class="row">
+                <div class="offset-3"></div>
+                <div class="col-6">
+                    {{ form_start(form) }}
+                        <p class="text-muted">Votre mot de passe doit contenir au moins une minuscule, une majuscule et un chiffre</p>
+                        {{ form_label(form.password) }}
+                        {{ form_widget(form.password) }}
+                        <button class="btn btn-primary">Réinitialiser</button>
+                    {{ form_end(form) }}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
