--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -212,9 +212,18 @@ label.toggle-off {
 /*
     Forms
  */
-label.required:before {
+label.required:not(.custom-control-label):before {
     content: "* ";
     color: red;
+}
+
+legend.required:before {
+    content: "* ";
+    color: red;
+}
+
+legend.required {
+    font-weight: 700;
 }
 
 /*
