--- a/app/Resources/views/course_info/activities/activities.html.twig
+++ b/app/Resources/views/course_info/activities/activities.html.twig
@@ -42,106 +42,108 @@
                 </button>
             </div>
         </div>
-        <div id="activity-content" class="col-sm p-0" style="width: calc(100% - 250px); left: 250px">
-            <div style="min-height: 300px;" class="mb-2">
-                {% if activeSection.courseSectionActivities is empty %}
-                    <div class="text-center ">
-                        <h3 class="text-danger">Aucune activité n'a été ajoutée à la section</h3>
-                        <div class="text-bold">
-                            Pour ajouter des activités veuillez sélectionner une activité dans le carousel ci-dessous.
+        {% if activeSection is not null %}
+            <div id="activity-content" class="col-sm p-0" style="width: calc(100% - 250px); left: 250px">
+                <div style="min-height: 300px;" class="mb-2">
+                    {% if activeSection.courseSectionActivities is empty %}
+                        <div class="text-center ">
+                            <h3 class="text-danger">Aucune activité n'a été ajoutée à la section</h3>
+                            <div class="text-bold">
+                                Pour ajouter des activités veuillez sélectionner une activité dans le carousel ci-dessous.
+                            </div>
+                            <i class="fas fa-arrow-down fa-5x"></i>
                         </div>
-                        <i class="fas fa-arrow-down fa-5x"></i>
-                    </div>
-                {% endif %}
-            </div>
-
-            <div class="card">
-                <div class="card-header d-flex p-0">
-                    <h3 class="card-title p-3 text-black-50">Activités</h3>
-                    <ul class="nav nav-pills ml-auto p-2">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#tab_1" data-toggle="tab">Tab 1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#tab_2" data-toggle="tab">Tab 2</a>
-                        </li>
-                    </ul>
+                    {% endif %}
                 </div>
-                <div class="card-body p-0">
-                    <div class="tab-content">
-                        <div id="tab_1" class="tab-pane active">
-                            <div class="activity-carousel">
-                                <button class="activity-carousel-prev btn btn-link">
-                                    <i class="fas fa-chevron-left"></i>
-                                </button>
-                                <div class="activity-carousel-items">
-                                    {% for activity in activities %}
-                                        <a class="m-auto modal-action"
-                                           data-action-title="Ajouter une activité"
-                                           data-action-url="{{ path("course_activities_add_activity", {'sectionId': activeSection.id, 'activityId': activity.id}) }}">
-                                            <div class="activity-carousel-item text-center d-flex shadow">
-                                                <div class="m-auto">{{ activity.label }}</div>
+
+                <div class="card">
+                    <div class="card-header d-flex p-0">
+                        <h3 class="card-title p-3 text-black-50">Activités</h3>
+                        <ul class="nav nav-pills ml-auto p-2">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#tab_1" data-toggle="tab">Tab 1</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#tab_2" data-toggle="tab">Tab 2</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-body p-0">
+                        <div class="tab-content">
+                            <div id="tab_1" class="tab-pane active">
+                                <div class="activity-carousel">
+                                    <button class="activity-carousel-prev btn btn-link">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </button>
+                                    <div class="activity-carousel-items">
+                                        {% for activity in activities %}
+                                            <a class="m-auto modal-action"
+                                               data-action-title="Ajouter une activité"
+                                               data-action-url="{{ path("course_activities_add_activity", {'sectionId': activeSection.id, 'activityId': activity.id}) }}">
+                                                <div class="activity-carousel-item text-center d-flex shadow">
+                                                    <div class="m-auto">{{ activity.label }}</div>
+                                                </div>
+                                            </a>
+                                        {% endfor %}
+                                    </div>
+                                    <button class="activity-carousel-next btn btn-link">
+                                        <i class="fas fa-chevron-right"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div id="tab_2" class="tab-pane">
+                                <div class="activity-carousel">
+                                    <button class="activity-carousel-prev btn btn-link">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </button>
+                                    <div class="activity-carousel-items">
+                                        <a href="#">
+                                            <div class="activity-carousel-item text-center">
+                                                <h3>Test3</h3>
+                                                <h6>Test4</h6>
                                             </div>
                                         </a>
-                                    {% endfor %}
+                                        <a href="#">
+                                            <div class="activity-carousel-item text-center">
+                                                <h3>Test3</h3>
+                                                <h6>Test4</h6>
+                                            </div>
+                                        </a>
+                                        <a href="#">
+                                            <div class="activity-carousel-item text-center">
+                                                <h3>Test3</h3>
+                                                <h6>Test4</h6>
+                                            </div>
+                                        </a>
+                                        <a href="#">
+                                            <div class="activity-carousel-item text-center">
+                                                <h3>Test3</h3>
+                                                <h6>Test4</h6>
+                                            </div>
+                                        </a>
+                                        <a href="#">
+                                            <div class="activity-carousel-item text-center">
+                                                <h3>Test3</h3>
+                                                <h6>Test4</h6>
+                                            </div>
+                                        </a>
+                                        <a href="#">
+                                            <div class="activity-carousel-item text-center">
+                                                <h3>Test3</h3>
+                                                <h6>Test4</h6>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <button class="activity-carousel-next btn btn-link">
+                                        <i class="fas fa-chevron-right"></i>
+                                    </button>
                                 </div>
-                                <button class="activity-carousel-next btn btn-link">
-                                    <i class="fas fa-chevron-right"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div id="tab_2" class="tab-pane">
-                            <div class="activity-carousel">
-                                <button class="activity-carousel-prev btn btn-link">
-                                    <i class="fas fa-chevron-left"></i>
-                                </button>
-                                <div class="activity-carousel-items">
-                                    <a href="#">
-                                        <div class="activity-carousel-item text-center">
-                                            <h3>Test3</h3>
-                                            <h6>Test4</h6>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="activity-carousel-item text-center">
-                                            <h3>Test3</h3>
-                                            <h6>Test4</h6>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="activity-carousel-item text-center">
-                                            <h3>Test3</h3>
-                                            <h6>Test4</h6>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="activity-carousel-item text-center">
-                                            <h3>Test3</h3>
-                                            <h6>Test4</h6>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="activity-carousel-item text-center">
-                                            <h3>Test3</h3>
-                                            <h6>Test4</h6>
-                                        </div>
-                                    </a>
-                                    <a href="#">
-                                        <div class="activity-carousel-item text-center">
-                                            <h3>Test3</h3>
-                                            <h6>Test4</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                                <button class="activity-carousel-next btn btn-link">
-                                    <i class="fas fa-chevron-right"></i>
-                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </div>
 {% endblock %}
 
@@ -215,7 +217,6 @@
                 if(translation < translation_max) {
                     translation = translation_max;
                 }
-                console.log(translation, translation_max);
                 $('.activity-carousel-items').css('transform', 'translateX(' + translation + 'px)');
             });
         });
