--- a/app/Resources/views/course_info/activities/form/add_activity.html.twig
+++ b/app/Resources/views/course_info/activities/form/add_activity.html.twig
@@ -7,11 +7,13 @@
 {% if form.activityType is defined %}
     {{ form_row(form.activityType, {label_attr: {class: 'radio-custom'} }) }}
 {% endif %}
-Mode
+<p>Mode</p>
 
+<label>Cette activité est-elle évaluable ?</label>
 {{ form_row(form.evaluable) }}
-{{ form_row(form.evaluationRate) }}
+<label>Type de contrôle (Continu / Terminal) :</label>
 {{ form_row(form.evaluationCt) }}
+{{ form_row(form.evaluationRate) }}
 {{ form_row(form.evaluationTeacher) }}
 {{ form_row(form.evaluationPeer) }}
 <div class="d-flex justify-content-center">
@@ -24,4 +26,5 @@ Mode
 
 <script>
     $('#course_section_activity_evaluable').bootstrapToggle();
+    $('#course_section_activity_evaluationCt').bootstrapToggle();
 </script>
