--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -12,6 +12,6 @@
     </div>
 
     <h1 class="title_error">Oops!</h1>
-    <h1 class="title_error"> Erreur 500 Un problème est survenu!</h1>
-    <div class="btn_error">Return to Home</div>
+    <h1 class="title_error"> Erreur 500, Un problème est survenu!</h1>
+   <!-- <div type="button" class="btn_error">Retour au </div> -->
 {% endblock %}
