--- a/app/Resources/views/course_info/activities/activities.html.twig
+++ b/app/Resources/views/course_info/activities/activities.html.twig
@@ -60,34 +60,33 @@
                     <div class="card-header d-flex p-0">
                         <h3 class="card-title p-3 text-black-50">Activités</h3>
                         <ul class="nav nav-pills ml-auto p-2">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#tab_1" data-toggle="tab">Tab 1</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#tab_2" data-toggle="tab">Tab 2</a>
-                            </li>
+                            {% if activityTypes is not empty %}
+                                {% for activityType in activityTypes %}
+                                    <li class="nav-item">
+                                        <a class="nav-link {% if activityType.id is same as(activityTypes[0].id) %}active{% endif %}" href="#tab_{{ activityType.id }}" data-toggle="tab">{{ activityType.label }}</a>
+                                    </li>
+                                {% endfor %}
+                            {% endif %}
                         </ul>
                     </div>
                     <div class="card-body p-0">
                         <div class="tab-content">
                             {% for activityType in activityTypes %}
-                                <div id="tab_{{ activityType.label }}" class="tab-pane active">
+                                <div id="tab_{{ activityType.id }}" class="tab-pane active">
                                     <div class="activity-carousel">
                                         <button class="activity-carousel-prev btn btn-link">
                                             <i class="fas fa-chevron-left"></i>
                                         </button>
                                         <div class="activity-carousel-items">
                                             {% for activity in activities %}
-                                                {% if activity.activityTypes is not empty %}
-                                                    {% if activityType in activity.activityTypes %}
-                                                        <a class="m-auto modal-action"
-                                                           data-action-title="Ajouter une activité"
-                                                           data-action-url="{{ path("course_activities_add_activity", {'sectionId': activeSection.id, 'activityId': activity.id}) }}">
-                                                            <div class="activity-carousel-item text-center d-flex shadow">
-                                                                <div class="m-auto">{{ activity.label }}</div>
-                                                            </div>
-                                                        </a>
-                                                    {% endif %}
+                                                {% if activity.activityTypes is not empty and activityType in activity.activityTypes %}
+                                                    <a class="m-auto modal-action"
+                                                       data-action-title="Ajouter une activité"
+                                                       data-action-url="{{ path("course_activities_add_activity", {'sectionId': activeSection.id, 'activityId': activity.id}) }}">
+                                                        <div class="activity-carousel-item text-center d-flex shadow">
+                                                            <div class="m-auto">{{ activity.label }}</div>
+                                                        </div>
+                                                    </a>
                                                 {% endif %}
                                             {% endfor %}
                                         </div>
@@ -97,54 +96,6 @@
                                     </div>
                                 </div>
                             {% endfor %}
-                            <div id="tab_2" class="tab-pane">
-                                <div class="activity-carousel">
-                                    <button class="activity-carousel-prev btn btn-link">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </button>
-                                    <div class="activity-carousel-items">
-                                        <a href="#">
-                                            <div class="activity-carousel-item text-center">
-                                                <h3>Test3</h3>
-                                                <h6>Test4</h6>
-                                            </div>
-                                        </a>
-                                        <a href="#">
-                                            <div class="activity-carousel-item text-center">
-                                                <h3>Test3</h3>
-                                                <h6>Test4</h6>
-                                            </div>
-                                        </a>
-                                        <a href="#">
-                                            <div class="activity-carousel-item text-center">
-                                                <h3>Test3</h3>
-                                                <h6>Test4</h6>
-                                            </div>
-                                        </a>
-                                        <a href="#">
-                                            <div class="activity-carousel-item text-center">
-                                                <h3>Test3</h3>
-                                                <h6>Test4</h6>
-                                            </div>
-                                        </a>
-                                        <a href="#">
-                                            <div class="activity-carousel-item text-center">
-                                                <h3>Test3</h3>
-                                                <h6>Test4</h6>
-                                            </div>
-                                        </a>
-                                        <a href="#">
-                                            <div class="activity-carousel-item text-center">
-                                                <h3>Test3</h3>
-                                                <h6>Test4</h6>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <button class="activity-carousel-next btn btn-link">
-                                        <i class="fas fa-chevron-right"></i>
-                                    </button>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
