voter + refonte controller (route + security) + ajoutr de controller select2

--- a/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
+++ b/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_edit', {'id': form.vars.data.id}), 'data-card': 'card-equipment'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_edit', {'id': form.vars.data.courseInfo.id, 'resourceEquipementId': form.vars.data.id}), 'data-card': 'card-equipment'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
