--- a/app/Resources/views/course_info/objectives_course/form/edit_achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/edit_achievement.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_edit_achievement', {'id': form.vars.data.id }), 'data-card': 'card-achievement'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_edit_achievement', {'id': form.vars.data.courseInfo.id, 'achievementId': form.vars.data.id }), 'data-card': 'card-achievement'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
