--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -3,8 +3,8 @@
     <div class="ml-2">
         <input type="checkbox" data-toggle="toggle" data-style="ios" id="btn_tutoring" data-on="Oui"
                data-off="non"
-               data-action-title="Ajouter une compétence"
-               data-action-url="{{ path('objective_course_tutoring', {'id': courseInfo.id }) }}"
+               data-action-title="Ajouter une séance de tutorat"
+               data-action-url="{{ path('objective_course_tutoring_form', {'id': courseInfo.id }) }}"
                 {% if courseInfo.tutoring %}
                     checked
                 {% endif %}
@@ -16,7 +16,7 @@
             class="btn btn-link modal-action p-0 position-absolute"
             style="top: 0px; right: 0px"
             data-action-title="Ajouter une compétence"
-            data-action-url="{{ path('objective_course_tutoring', {'id': courseInfo.id }) }}">
+            data-action-url="{{ path('objective_course_tutoring_form', {'id': courseInfo.id }) }}">
         <i class="fas fa-edit"></i>
     </button>
     <div class="mr-4">
@@ -71,7 +71,7 @@
                     <button type="button"
                             class="btn btn-link modal-action p-0"
                             data-action-title="Modifier une remédiation"
-                            data-action-url="{{ path('objective_course_edit_tutoring_resources', {'id': tutoringResources.id}) }}">
+                            data-action-url="{{ path('objective_course_edit_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': tutoringResources.id}) }}">
                         <i class="fas fa-edit"></i>
                     </button>
                     <button type="button" class="btn btn-link modal-action p-0"
