toggle-focus -> card-syllabus

--- a/app/Resources/assets/scss/course_info_layout.scss
+++ b/app/Resources/assets/scss/course_info_layout.scss
@@ -27,7 +27,7 @@
  * Focus.
  */
 
-.hasActiveChild .toggle-focus:not(.active) {
+.hasActiveChild .card-syllabus:not(.active) {
   opacity: 0.2;
   pointer-events: none;
 }
