tableau de bord non fini

--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -65,8 +65,8 @@
     {{ parent() }}
     <script>
         $(document).ready(function () {
-            $('#menu-objectives_course').addClass('active');
-            $('#menu-objectives_course').addClass('border-bottom-3 border-white');
+            $('#menu-objectives-course').addClass('active');
+            $('#menu-objectives-course').addClass('border-bottom-3 border-white');
 
             $(document).on('change', '#btn_tutoring', function () {
                 let checkedValue = $(this).prop('checked');
