--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,10 +1,44 @@
+
+<label class="font-weight-bold">Volumes horaires "Présentiel" importés</label>
+<div class="row mb-3">
+    {% if courseInfo.teachingCmClass is not null %}
+        <div class="col-md-4 col-sm-6 col-12">
+            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'Cours Magistraux', 'teachingTypeHours': courseInfo.teachingCmClass } %}
+        </div>
+    {% endif %}
+    {% if courseInfo.teachingTdClass is not null %}
+        <div class="col-md-4 col-sm-6 col-12">
+            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'Travaux Dirigés', 'teachingTypeHours': courseInfo.teachingTdClass } %}
+        </div>
+    {% endif %}
+    {% if courseInfo.teachingTpClass is not null %}
+        <div class="col-md-4 col-sm-6 col-12">
+            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'Travaux Pratiques', 'teachingTypeHours': courseInfo.teachingTpClass } %}
+        </div>
+    {% endif %}
+</div>
+
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
 {{ form_errors(form) }}
+
+<div class="row">
+    <div class="col-md-5">
+        <label class="required font-weight-bold">Quel est votre mode d'enseignement ?</label>
+        {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
+    </div>
+    <div class="col-md-7">
+        {% include 'course_info/presentation/form/_teaching_mode_class.html.twig' %}
+    </div>
+</div>
+
+
+
+
 <div class="row mt-3">
     <div class="col">
-        <div class="row mb-3">
+        <div class="row mb-4">
             <div class="col">
-                <label class="required font-weight-bold">Quel est votre mode d'enseignement ?</label>
+
             </div>
         </div>
         <div class="row mb-2">
