--- a/app/Resources/views/course_info/presentation/view/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teachers.html.twig
@@ -1,3 +1,6 @@
+<h6 class="mb-3">
+    Qui fait parti de l'équipe enseignante ?
+</h6>
 {% if courseInfo.courseTeachers is empty %}
     <div class="d-flex justify-content-center align-items-center mandatory-data">
         <span class="empty-data">
